# Dictat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEMO_INSTRUCTIONS.md  DEPLOYMENT.md  Dockerfile  FRONTEND_TODO.md  PROJECT_STATUS.md  README.md  TEST_STATUS.md  TODO.md  Test_Targets.md  alembic.ini  claude.md  docker-compose.yml  main.py  pyproject.toml  theme.css
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/v1/: api.py
app/api/v1/endpoints/: audit.py  auth.py  dictations.py  gdpr.py  transcriptions.py  users.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: session.py
app/models/: __init__.py  audit_log.py  dictation.py  transcription.py  user.py
app/schemas/: __init__.py  auth.py  dictation.py  transcription.py  user.py
app/services/: opa.py  storage.py
docs/frontend/: API_REFERENCE.md  QUICK_START.md  api-client.ts  api-types.ts
frontend/: .env.example  .gitignore  README.md  TESTING.md  index.html  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/.github/workflows/: test.yml
frontend/e2e/: auth.spec.ts  dictations.spec.ts  navigation.spec.ts
frontend/src/: App.tsx  app.css  app.html  index.css
frontend/src/components/: AudioPlayer.tsx  Layout.tsx  ProtectedRoute.tsx  Toast.tsx
frontend/src/components/__tests__/: AudioPlayer.test.tsx  ProtectedRoute.test.tsx  Toast.test.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useToast.tsx
frontend/src/hooks/__tests__/: useToast.test.tsx
frontend/src/lib/: api-client.ts
frontend/src/pages/: Dashboard.tsx  DictationUpload.tsx  DoctorDashboard.tsx  Login.tsx  MyWork.tsx  Register.tsx  SecretaryWorkQueue.tsx  TranscriptionEditor.tsx
frontend/src/pages/__tests__/: DoctorDashboard.test.tsx  Login.test.tsx
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/auth/login/: +page.svelte
frontend/src/routes/auth/register/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/dashboard/doctor/: +page.svelte
frontend/src/routes/dashboard/secretary/: +page.svelte
frontend/src/routes/dictations/[id]/: +page.svelte
frontend/src/routes/dictations/upload/: +page.svelte
frontend/src/routes/transcriptions/create/[id]/: +page.svelte
frontend/src/test/: mockData.ts  setup.ts  utils.tsx
frontend/src/test/mocks/: handlers.ts
frontend/src/tests/: setup.ts  vitest.d.ts
frontend/src/tests/helpers/: mockApi.ts  testUtils.ts
frontend/src/tests/unit/components/: LoadingSpinner.test.ts  Toast.test.ts
frontend/src/tests/unit/stores/: auth.test.ts  dictations.test.ts  toast.test.ts
frontend/tests/e2e/: authentication.spec.ts  doctor-workflow.spec.ts  secretary-workflow.spec.ts
frontend/tests/fixtures/: auth.ts
opa/policies/: dictat.rego  dictat_test.rego
scripts/: seed_database.py  setup-hooks.sh
terraform/: main.tf  terraform.tfvars.example  variables.tf
terraform/scripts/: cloud-init.yml
tests/: conftest.py
tests/api/: test_auth.py
tests/unit/: test_security.py  test_security_jwt.py  test_security_password.py  test_user_model.py
